log
Thu 09 Mar 2023 04:09:19 PM UTC: 
 tests:  0|7
total_score: 0/70
97a1439
Thu 09 Mar 2023 04:16:37 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
fefbaf7
Sun 12 Mar 2023 12:56:37 AM UTC: 
 exercises.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:43:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   43 |   return 0;
      |          ^
exercises.c:28:6: note: declared here
   28 | void arrayMaxMin(int *a, int n, int *max, int *min) {
      |      ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
63efce5
Sun 12 Mar 2023 12:57:05 AM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 20/70
37d1d15
Sun 12 Mar 2023 01:22:56 AM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
ecc30cf
Sun 12 Mar 2023 01:29:29 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:100:8: error: ‘Vector’ has no member named ‘dato’; did you mean ‘datos’?
  100 |   v -> dato[i] = valor;
      |        ^~~~
      |        datos
Compilation failed
b175ce2
Sun 12 Mar 2023 01:29:35 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
d508cf4
Sun 12 Mar 2023 01:37:01 AM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:91:3: error: unknown type name ‘vector’; did you mean ‘Vector’?
   91 |   vector * vectorTemp = (vector *) malloc(sizeof(vector));
      |   ^~~~~~
      |   Vector
exercises.c:91:26: error: ‘vector’ undeclared (first use in this function); did you mean ‘Vector’?
   91 |   vector * vectorTemp = (vector *) malloc(sizeof(vector));
      |                          ^~~~~~
      |                          Vector
exercises.c:91:26: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:91:34: error: expected expression before ‘)’ token
   91 |   vector * vectorTemp = (vector *) malloc(sizeof(vector));
      |                                  ^
exercises.c:92:6: error: ‘p’ undeclared (first use in this function)
   92 |   if(p == NULL) return NULL;
      |      ^
exercises.c:91:12: error: unused variable ‘vectorTemp’ [-Werror=unused-variable]
   91 |   vector * vectorTemp = (vector *) malloc(sizeof(vector));
      |            ^~~~~~~~~~
exercises.c: In function ‘asignarValor’:
exercises.c:105:3: error: invalid type argument of unary ‘*’ (have ‘int’)
  105 |   *v -> datos[i] = valor;
      |   ^~~~~~~~~~~~~~
exercises.c: In function ‘crearVector’:
exercises.c:96:1: error: control reaches end of non-void function [-Werror=return-type]
   96 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f200a9f
Sun 12 Mar 2023 01:37:25 AM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:104:3: error: invalid type argument of unary ‘*’ (have ‘int’)
  104 |   *v -> datos[i] = valor;
      |   ^~~~~~~~~~~~~~
exercises.c: In function ‘crearVector’:
exercises.c:95:1: error: control reaches end of non-void function [-Werror=return-type]
   95 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
286b64b
Sun 12 Mar 2023 01:37:35 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:95:1: error: control reaches end of non-void function [-Werror=return-type]
   95 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
68108f4
Sun 12 Mar 2023 01:38:33 AM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:91:3: error: unknown type name ‘vector’; did you mean ‘Vector’?
   91 |   vector * vectorTemp = (vector *) malloc(sizeof(vector));
      |   ^~~~~~
      |   Vector
exercises.c:91:26: error: ‘vector’ undeclared (first use in this function); did you mean ‘Vector’?
   91 |   vector * vectorTemp = (vector *) malloc(sizeof(vector));
      |                          ^~~~~~
      |                          Vector
exercises.c:91:26: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:91:34: error: expected expression before ‘)’ token
   91 |   vector * vectorTemp = (vector *) malloc(sizeof(vector));
      |                                  ^
exercises.c:92:6: error: ‘p’ undeclared (first use in this function)
   92 |   if(p == NULL) return NULL;
      |      ^
exercises.c:91:12: error: unused variable ‘vectorTemp’ [-Werror=unused-variable]
   91 |   vector * vectorTemp = (vector *) malloc(sizeof(vector));
      |            ^~~~~~~~~~
exercises.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fd33ef9
Sun 12 Mar 2023 01:38:43 AM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:91:1: error: control reaches end of non-void function [-Werror=return-type]
   91 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0e932d4
Sun 12 Mar 2023 01:39:08 AM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|4
total_score: 30/70
3c55092
